5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1630_2944.log
== TEST (2019-04-02 17:02:40) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/180
Farinha = Qpan/110

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
0.022222222222222223
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:03:00) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/180
Farinha = Qpan/110

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
0.022222222222222223
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:03:28) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/0.18
Farinha = Qpan/0.11

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
22.22222222222222
36.36363636363637
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:03:44) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/18
Farinha = Qpan/11

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
0.2222222222222222
0.36363636363636365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:03:58) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan*18
Farinha = Qpan*11

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:04:05) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan*18
Farinha = Qpan*11

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:04:42) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/ 180 * 1000
Farinha = Qpan / 110 * 1000

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
22.22222222222222
36.36363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:05:00) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan/8
Leite = Qpan/ 180 / 1000
Farinha = Qpan / 110 / 1000

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
2.2222222222222223e-05
3.6363636363636364e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:19) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = 
Farinha = Qpan / 8,8

print(Ovo)
print(Leite)
print(Farinha)
-- ERROR:
File "XXXX", line 4
    Leite = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:24) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan
Farinha = Qpan / 8,8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
4
(0.5, 8)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:31) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan
Farinha = Qpan / 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
4
0.45454545454545453
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:44) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan
Farinha = Qpan * 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
4
35.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:11:02) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan
Farinha = Qpan * 110

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
4
440
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:11:08) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan
Farinha = Qpan * 1.10

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
4
4.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:19) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 25
Farinha = Qpan * 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
100
35.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:41) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 180
Farinha = Qpan * 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
720
35.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:51) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 0.180
Farinha = Qpan * 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
0.72
35.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:58) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 18
Farinha = Qpan * 8.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
35.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:22) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 18
Farinha = Qpan * 9.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
39.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:31) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 18
Farinha = Qpan * 12.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
51.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:39) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 18
Farinha = Qpan * 13.8

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
55.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:48) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 18
Farinha = Qpan * 13.75

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
72
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:45) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 27.5
Farinha = Qpan * 13.75

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
110.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:54) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 22.5
Farinha = Qpan * 13.75

print(Ovo)
print(Leite)
print(Farinha)
-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:14:58) 
-- CODE:
Qpan = int(input("quantidade de panquecas: "))

Ovo = Qpan / 8
Leite = Qpan * 22.5
Farinha = Qpan * 13.75

print(Ovo)
print(Leite)
print(Farinha)
-- EXECUTION TIME:
0.162665
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
90.0
55.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
450.0
275.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
